tests/fsharp/typecheck/sigs/neg_byref_13.bsl

neg_byref_13.fs(2,6,2,8): typecheck error FS0445: The type abbreviation contains byrefs. This is not permitted by F#.
